# Scoring-Engine-V1

./: .env  .env.example  .gitignore  Dockerfile  README.md  Readme.md  asset_registry.py  data_loader.py  docker-compose.api.dev.yml  docker-compose.dev.yml  docker-compose.yml  entry_quality.py  fundamentals.py  main.py  market_data.py  priority_signal_scoring_v2.py  pyproject.toml  ranking.py  requirements.txt  scoring.py  technical_bias.py  utils.py
.airflow2/: requirements.txt
.airflow2/script/: entrypoint.sh
.github/: CODEOWNERS
.github/workflows/: backup.yml  ci.yaml  deploy.yaml  validate.yaml
consumers/: Dockerfile  README.md  requirements.txt
consumers/L1/: processor.py  run.py  validation.py
consumers/L2/: processor.py  run.py  validation.py
consumers/common/: config.py  kafka_consumer.py
llm_sentiment/sentiment/: requirements.txt  run_sentiment.py  scraper.py
llm_sentiment/sentiment/api/: Dockerfile  README.md  main.py  pyproject.toml
llm_sentiment/sentiment/api/core/: logging.py  security.py  settings.py
llm_sentiment/sentiment/api/models/: sentiment_model.py
llm_sentiment/sentiment/api/routers/: health_router.py  sentiment_router.py
llm_sentiment/sentiment/config/: api_keys.yaml  sources.yaml  weights.yaml
llm_sentiment/sentiment/core/: composite_scorer.py  orchestrator.py  schema.py
llm_sentiment/sentiment/data/calendar/: tradingeconomics_releases.csv  tradingeconomics_releases.parquet  worldbank_releases.csv  worldbank_releases.parquet
llm_sentiment/sentiment/data/macros/: macro_raw.csv  macro_raw.parquet  macros_sentiment.csv  macros_sentiment.parquet
llm_sentiment/sentiment/data/micros/: micros_raw.csv  micros_raw.parquet  micros_sentiment.csv  micros_sentiment.parquet
llm_sentiment/sentiment/data/sector/: sector_raw.csv  sector_raw.parquet  sector_sentiment.csv  sector_sentiment.parquet
llm_sentiment/sentiment/data/social/: social_sentiment.csv  social_sentiment.parquet
llm_sentiment/sentiment/data/volatility/: btc_vol.csv  btc_vol.parquet  cvi.csv  cvi.parquet  eth_vol.csv  eth_vol.parquet  volatility_sentiment.csv  (+1 more)
llm_sentiment/sentiment/ingestion/: clickhouse_ingest.py
llm_sentiment/sentiment/orchestration/: scheduler.py
llm_sentiment/sentiment/utils/: config_loader.py  https_client.py  logger.py  save_utils.py  sentiment_scaler.py  transformers.py
monitoring/: prometheus.yml
src/: main.py
(+20 files in other folders)
