[tool.poetry]
name = "cq-scoring-engine"
version = "0.1.0"
description = "Module 2: Model Scoring Engine"
authors = ["Scoring & Analytics Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Framework Web
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}

# Calcul Numérique et Manipulation de Données
numpy = "^1.25.2"
scipy = "^1.11.4"
pandas = "^2.1.3"
numba = "^0.58.1" # Pour l'accélération JIT
statsmodels = "^0.14.0"
scikit-learn = "^1.3.2"

# Métriques de Performance
pyfolio = "^0.9.2"
empyrical = "^0.5.5"
quantlib = "^1.32"

# Connexions aux Bases de Données
clickhouse-driver = "^0.2.6"
redis = {extras = ["hiredis"], version = "^5.0.1"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}

# Communication Temps-Réel
websockets = "^12.0"

# Scaling & Traitement Parallèle
ray = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
memory-profiler = "^0.61.0"
psutil = "^5.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"