[tool.poetry]
name = "sentiment-api"
version = "0.1.0"
description = "Composite sentiment scoring API service"
authors = ["Zrayouil karima"]
readme = "README.md"
packages = [{ include = "llm_sentiment", from = ".." }]

[tool.poetry.dependencies]
python = "^3.11"

# --- Web API ---
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"

# --- Data & computation ---
pandas = "^2.2.2"
numpy = "^1.26"          # automatically pulled by pandas; pin for safety
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
python-dateutil = "^2.9.0"
tqdm = "^4.66.0"

# --- Machine Learning / NLP ---
transformers = "^4.41.0"
torch = "^2.2.0"
vaderSentiment = "^3.3.2"

# --- Web scraping / networking ---
requests = "^2.32.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.2.0"
PyYAML = "^6.0.0"

# --- Task scheduling ---
apscheduler = "^3.10.4"

# --- Database / analytics ---
clickhouse-driver = "^0.2.9"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"